--- a/gerar_graficos.ipynb
+++ b/gerar_graficos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -20,21 +20,34 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Lendo os dados do arquivo\n",
-    "with open('resultados.txt', 'r') as f:\n",
-    "    dados = [linha.split() for linha in f]\n",
+    "with open('resultados_fortran.txt', 'r') as f:\n",
+    "    dados_f = [linha.split() for linha in f]\n",
+    "    NxM = [str(l[0]) for l in dados_f]\n",
+    "    k = [int(l[1]) for l in dados_f]\n",
+    "    tempo1 = [float(l[2]) for l in dados_f]\n",
+    "    tempo2 = [float(l[3]) for l in dados_f]\n",
+    "    #Criando o gráfico\n",
+    "    plt.plot(k, tempo1, label='Loop aninhado padrão')\n",
+    "    plt.plot(k, tempo2, label='Loop aninhado invertido')\n",
+    "    plt.legend()\n",
+    "    plt.xlabel('Iteração')\n",
+    "    plt.ylabel('Tempo de execução (s)')\n",
+    "    plt.show()\n",
     "\n",
-    "NxM = [str(l[0]) for l in dados]\n",
-    "k = [int(l[1]) for l in dados]\n",
-    "tempo1 = [float(l[2]) for l in dados]\n",
-    "tempo2 = [float(l[3]) for l in dados]\n",
-    "\n",
-    "# Criando o gráfico\n",
-    "plt.plot(NxM, tempo1, label='Loop aninhado padrão')\n",
-    "plt.plot(NxM, tempo2, label='Loop aninhado invertido')\n",
-    "plt.legend('Desempenho ')\n",
-    "plt.xlabel('Iteração')\n",
-    "plt.ylabel('Tempo de execução (s)')\n",
-    "plt.show()\n"
+    "with open('resultados_c.txt', 'r') as c:\n",
+    "    dados_c = [linha.split() for linha in c]\n",
+    "    NxM = [str(l[0]) for l in dados_c]\n",
+    "    k = [int(l[1]) for l in dados_c]\n",
+    "    tempo1 = [float(l[2]) for l in dados_c]\n",
+    "    tempo2 = [float(l[3]) for l in dados_c]\n",
+    "    #Criando o gráfico\n",
+    "    plt.plot(k, tempo1, label='Loop aninhado padrão')\n",
+    "    plt.plot(k, tempo2, label='Loop aninhado invertido')\n",
+    "    plt.legend()\n",
+    "    plt.xlabel('Iteração')\n",
+    "    plt.ylabel('Tempo de execução (s)')\n",
+    "    plt.show()\n",
+    "\n"
    ]
   }
  ],
